gcc/algol60/testsuite/fail/types3.a60
'begin'
 'real' a;
 a := "ahoj";
'end';
